syntax = "proto3";

package field;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "user_center_field.proto";

// 渠道服务接口定义，渠道主要是配置用户登录时的可选登录方法
service Service{
  rpc AllFieldType (google.protobuf.Empty)  returns (AllFieldTypeReply) {
    option (google.api.http) = {
      get: "/user-center/v1/field/types",
    };
  }

  rpc PageField (PageFieldRequest)  returns (PageFieldReply) {
    option (google.api.http) = {
      get: "/user-center/v1/fields",
    };
  }

  rpc AddField (AddFieldRequest)  returns (AddFieldReply) {
    option (google.api.http) = {
      post: "/user-center/v1/field",
      body:"*"
    };
  }

  rpc UpdateField (UpdateFieldRequest)  returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/user-center/v1/field",
      body:"*"
    };
  }

  rpc DeleteField (DeleteFieldRequest)  returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user-center/v1/field",
    };
  }

//  rpc CurrentField (google.protobuf.Empty)  returns (CurrentFieldReply) {
//    option (google.api.http) = {
//      get: "/user-center/client/v1/fields",
//    };
//  }
}